--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "graphology": "^0.23.2",
+    "graphology-simple-path": "^0.1.2",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -18,6 +20,7 @@
     "autoprefixer": "^10.4.0",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4",
+    "graphology-types": "^0.23.0",
     "postcss": "^8.4.4",
     "tailwindcss": "^2.2.19",
     "typescript": "4.5.2"
